--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p class="status">
             <label id="llmStatus">LLM</label>
             <label id="ttsStatus" for="ttsEnabled"><input id="ttsEnabled" type="checkbox" />TTS</label>
+            <label id="speakerStatus"> 🔊 </label>
         </p>
     </form>
     <script type="module" src="script.js"></script>
