textarea for input

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <article id="log"></article>
     <form>
         <p>
-            <input autofocus id="userInp" />
+            <textarea autofocus id="userInp"></textarea>
         </p>
         <p class="status">
             <label id="llmStatus">LLM</label>
