--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talking pet</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/urlfs@1.3.0/urlfs.js"></script>
 </head>
 
 <body>
