--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <textarea autofocus id="userInp"></textarea>
         </p>
         <p class="status">
+            <video id="throbber" src="throbber.webm" loop></video>
             <label id="llmStatus">LLM</label>
             <label id="ttsStatus" for="ttsEnabled"><input id="ttsEnabled" type="checkbox" />TTS</label>
             <label id="speakerStatus"> 🔊 </label>
